@@ -1,0 +1,27 @@
+#textdomain wesnoth
+{core/macros}
+
+[ai]
+    id=ai_akihara
+    description="Experimental Recruitment AI"
+    version=10800
+    [stage]
+        id=main_loop
+        name=testing_ai_default::candidate_action_evaluation_loop
+        {AI_CA_GOTO}
+        [candidate_action]
+            id=alternate_recruitment
+            engine=cpp
+            name=akihara_recruitment::recruitment
+            max_score={AI_CA_RECRUITMENT_SCORE}
+            score={AI_CA_RECRUITMENT_SCORE}
+        [/candidate_action]
+        {AI_CA_MOVE_LEADER_TO_GOALS}
+        {AI_CA_MOVE_LEADER_TO_KEEP}
+        {AI_CA_COMBAT}
+        {AI_CA_HEALING}
+        {AI_CA_VILLAGES}
+        {AI_CA_RETREAT}
+        {AI_CA_MOVE_TO_TARGETS}
+    [/stage]
+[/ai]
