@@ -1,0 +1,31 @@
+#textdomain wesnoth
+[event]
+    name=preload
+    first_time_only=no
+    [lua]
+        code = << register_test('0005-recruitment_test','Recruitment test'); >>
+    [/lua]
+[/event]
+
+[event]
+    name=0005-recruitment_test
+    first_time_only=no
+
+    [message]
+        speaker=narrator
+        image=wesnoth-icon.png
+        message= "This situation should test the recruitment phase"
+    [/message]
+    [move_unit]
+        name="Challenger AI"
+        to_x,to_y=15,2
+    [/move_unit]
+    [move_unit]
+    	name="Champion AI"
+        to_x,to_y=15,24
+    [/move_unit]
+    [modify_side]
+    	side=2
+    	switch_ai=$test_path_to_akihara_recruitment
+    [/modify_side]
+[/event]
