@@ -52,8 +52,12 @@
             value=ai/dev/testing_ai_default.cfg
         [/set_variable]
         [set_variable]
+            name=test_path_to_akihara_recruitment
+            value=ai/dev/akihara_recruitment.cfg
+        [/set_variable]
+        [set_variable]
             name=test_id
-            value=0002-poisoning
+            value=0005-recruitment_test
         [/set_variable]
 
         [set_menu_item]
@@ -119,6 +123,7 @@
         team_name=north
         user_team_name= "North"
         fog=yes
+        recruit="Dwarvish Guardsman,Dwarvish Fighter,Dwarvish Thunderer,Thief,Poacher,Footpad"
     [/side]
     [side]
         side=3
@@ -129,6 +134,7 @@
         team_name=south
         user_team_name= "South"
         fog=yes
+        recruit="Dwarvish Guardsman,Dwarvish Fighter,Dwarvish Thunderer,Thief,Poacher,Footpad"
     [/side]
 
     [event]
@@ -168,6 +174,15 @@
             message="Which AI do you wish to use, O Mighty AI Developer?"
             [option]
                 message="I am happy with the current AI of team 2, [$test_path_to_ai]"
+            [/option]
+            [option]
+                message="Akihara's ai will be awesome, won't it?"
+                [command]
+                    [set_variable]
+                        name=test_path_to_ai
+                        value=$test_path_to_akihara_recruitment
+                    [/set_variable]
+                [/command]
             [/option]
             [option]
                 message="My AI is TESTING AI DEFAULT, implemented as ai_composite."
