@@ -170,6 +170,7 @@ wesnoth_sources = Split("""
     addon/state.cpp
     addon/validation.cpp
     ai/actions.cpp
+    ai/akihara/recruitment.cpp
     ai/composite/ai.cpp
     ai/composite/aspect.cpp
     ai/composite/component.cpp
