@@ -18,6 +18,8 @@ Version 1.11.0-svn:
      markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)
  * AI:
    * AI now properly considers the expected damage from poison when attacking using poisoners.
+   * Adding a new scenario for the ai-arena-small in order to test the new AI.
+   * Adding new files for the new AI (ai/akihara/recruitment.?pp)
  * Campaigns:
    * Added a note to all final scenarios, stating which one is the last scenario
    * Dead Water:
